# sourcegraph

./: CHANGELOG.md  flake.nix  go.mod  go.sum  package.json  pnpm-lock.yaml  sg.config.yaml
client/cody/: package.json  tsconfig.json
client/cody-shared/src/: configuration.ts
client/cody-shared/src/chat/: client.ts
client/cody-shared/src/codebase-context/: index.ts
client/cody/src/: configuration.ts
client/cody/src/completions/: index.ts
client/cody/src/integration-test/: extension.test.ts
client/cody/src/keyword-context/: local-keyword-context-fetcher.ts
client/web-sveltekit/: Dockerfile
cmd/frontend/graphqlbackend/: schema.graphql
cmd/server/: Dockerfile
dev/nix/: comby.nix  ctags.nix  p4-fusion.nix  util.nix
dev/release/: package.json
doc/dev/background-information/ci/: reference.md
docker-images/blobstore/: Dockerfile
docker-images/prometheus/: Dockerfile
enterprise/cmd/cody-api/: BUILD.bazel  Dockerfile  main.go
enterprise/cmd/cody-api/shared/: server.go  service.go
enterprise/cmd/frontend/: build.sh  pre-build.sh
enterprise/dev/ci/images/: images.go
enterprise/internal/embeddings/: context_benchmark_test.go
enterprise/internal/licensing/: data.go  features.go
enterprise/internal/scim/: init.go  mock_db.go  user_get.go  user_patch.go  user_patch_test.go
internal/cmd/git-combine/: Dockerfile
internal/codeintel/dependencies/: service.go
internal/database/: repos.go  schema.json  schema.md
migrations/frontend/: squashed.sql
migrations/frontend/1674642349_add_priority_to_permission_sync_jobs/: down.sql  up.sql
(+37 files in other folders)
