load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cody-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/sourcegraph/enterprise/cmd/cody-api",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cody-api",
    embed = [":cody-api_lib"],
    visibility = ["//visibility:public"],
)
